--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,25 +1,32 @@
+h1 {
+}
+
 header{
     border-bottom: solid 3px;
-    border-color: black;
+    border-color: lightsteelblue;
     width:100%;
-    height: 10%;
-}
-form{
-    margin-top: 1in;
-
 }
 .main{
-     border: solid 3px;
-     border-color: black;
-     width: 50%;
-     height: 5in;
-     margin-top: 1in;
+    display: flex;
+    flex-direction: column;
 
 }
+.search-details{
+    text-align: center;
+    border: solid 2px;
+    border-color:lightsteelblue;
+    height: 100%;
+}
 .secondary{
-    border: solid 3px;
-    border-color: black;
-    width: 25%;
-    height: 2.5in;
-    margin-top: 1in;
+    border: solid 2px;
+    border-color: lightsteelblue;
+    height: 200pt;
+    padding: 10pt;
+    margin: 4pt;
+    text-align: center;
+}
+
+.column {
+    margin: 30pt;
+    padding: 10pt;
 }
