--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,6 +26,10 @@ body {
 #search {
     background: dimgrey;
 }
+
+.search-area {
+    display: flex;
+}
 .main {
   display: flex;
   flex-direction: column;
@@ -34,7 +38,7 @@ body {
   text-align: center;
   border: solid 2px;
   border-color: var(--primary);
-  height: 100%;
+  height: 93%;
 }
 .secondary {
   height: 200pt;
