--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,7 +18,7 @@ h1 {
 }
 
 body {
-  background-image: url('../wallpaper.jpg');
+  background-image: url("../wallpaper.jpg");
   background-size: cover;
 }
 
