--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,91 +1,137 @@
 :root {
-  --primary: antiquewhite;
-  font-family: "DM Sans", sans-serif;
-  color: #2b2d2f;
+    --primary: lightgoldenrodyellow;
+    font-family: "DM Sans", sans-serif;
+    color: #2b2d2f;
+    --secondary:#94403d
   
+  }
+  html{
+      background-color: #94403d;
+  }
+  header {
+    border-bottom: solid 3px;
+    border-color: var(--primary);
+    width: 100%;
+    color: var(--secondary);
+    background-color: var(--primary);
+    padding:1%;  
+  }
 
-}
-
-header {
-  border-bottom: solid 3px;
-  border-color: var(--primary);
-  width: 100%;
-  color: var(--primary);
-}
-
-h1 {
-  text-align: center;
-  font-size: 30pt;
-  font-weight: 400;
-}
-
-body {
-  background-image: url("../wallpaper.jpg");
-  background-size: cover;
-}
-
-#search {
-  background: dimgrey;
-}
-
-.search-area {
-  display: flex;
-  margin-bottom: 20%;
-}
-.main {
-  display: flex;
-  flex-direction: column;
-}
-.search-details {
-  text-align: center;
-  height: 93%;
-  color:yellow;
-}
-.secondary {
-  height: 200pt;
-  padding: 10pt;
-  margin: 4pt;
+  footer{
+      padding-bottom: 2%;
+    border-bottom: solid 3px;
+    border-color: var(--secondary);
+    width: 100%;
+    color: var(--primary);
+    background-color: var(--secondary);
+  }
+  h1 {
+    text-align: center;
+    font-size: 30pt;
+    font-weight: 400;
+  }
   
-}
+  body {
+    background-image: url("../wallpaper.jpg");
+    background-size: cover;
+  font-family: 'Dosis', sans-serif;
+  font-family: 'Imbue', serif;
+  font-family: 'Oswald', sans-serif;
+  
+  }
+  
+  #search {
+    background: var(--secondary);
+    color: var(--primary);
+  }
+  
+  .search-area {
+    display: flex;
+    margin-bottom: 20%;
+  }
+  .main {
+    display: flex;
+    flex-direction: column;
+  }
+  .search-details {
+    text-align: center;
+    height: 93%;
+    color:yellow;
+  }
+  .secondary {
+    height: 200pt;
+    padding: 10pt;
+    margin: 4pt;
+    
+  }
+  
+  .column {
+    margin: 15pt;
+    padding: 10pt;
+  }
+  #news {
+    background-size: cover;
+    opacity: 0.9;
+  }
+  
+  #chart {
+    height: 64%;
+    padding: 0pt;
+   
+  }
+  
+  #news a {
+      background-color: #94403d;
+       color: var(--secondary);
+    text-decoration: none;
+    font-size: 12pt;
+    font-weight: bold;
+    font-style: italic;
+    font-size: 100%;
+    background-color: var(--primary);
+    border-radius: 5px;
+margin-left :15%;  
+  }
+  
+  .input,
+  .select select,
+  .textarea {
+    background-color: lightgoldenrodyellow;
+    font-family: 'Oswald', sans-serif;
+    color:var(--secondary);
+  
+  }
+  
+  .cardStyle{
+      background-color: lightgoldenrodyellow;
+      color:#94403d;
+  }
+  .error{
+      color:orange;
+      text-align: center;
+  }
+  .addSecondary{
+      color:var(--secondary);
+      background-color:var(--primary);
+  }
 
-.column {
-  margin: 15pt;
-  padding: 10pt;
-}
-#news {
-  background-size: cover;
-  opacity: 0.9;
-}
+  #searchbtn :hover {
+      background-color: var(--primary);
+      color:var(--secondary);
 
-#chart {
-  height: 64%;
-  padding: 0pt;
-}
+  }
+  .button:active {
+    transform: translateY(4px);
+  }
+  #news :hover{
+    background-color: var(--secondary);
+    color:var(--primary) 
+  }
+  
+   
 
-#news a {
-    background-color: #94403d;
-     color: red;
-  text-decoration: none;
-  font-size: 12pt;
-  font-weight: bold;
-  font-style: italic;
-  font-size: x-large;
-  background-color: var(--primary);
-  border-radius: 5px;
-
-}
-
-.input,
-.select select,
-.textarea {
-  background-color: lightgoldenrodyellow;
-}
-
-.cardStyle{
-    background-color: #94403d;
-    color:red;
-}
-.error{
-    color:orange;
-}
-
+  @media only screen and (max-width: 670px) {
+    #chart {
+display: none;  
+  }
+  }
